# PocketAgent

./: .gitignore  LICENSE  README.md  agent_live.py  brainstorm.py  claude_master.py  claude_reviewer.py  poc_agent.py  test_daytona.py  test_daytona_bypass.py
.github/workflows/: build-apk.yml  ci.yml  publish-pypi.yml
.pocketagent/: todos.json
cloud/.devcontainer/: .gitignore  bootstrap.sh  codespace_exec.py  devcontainer.json  start-runtime.sh
cloud/runtime/: README.md  pyproject.toml
cloud/runtime/app/: __init__.py  agent.py  config.py  llm.py  main.py
cloud/runtime/app/tools/: __init__.py  registry.py
cloud/runtime/tests/: test_agentic_real.py  test_e2e_real_llm.py  test_live.py  test_smoke.py  verify_codespace.py
docs/: ARCHITECTURE.md  HF_SPACES_RESEARCH.md  PROTOCOL.md  RUNBOOK.md  SETUP-v0.5.md
phone/: .gitignore  App.tsx  README.md  app.json  expo-env.d.ts  jest.config.js  package-lock.json  package.json  tsconfig.json  withPocketAgentGradle.js
phone/src/components/: index.tsx
phone/src/hooks/: useAgentSession.ts
phone/src/lib/: agent-ws.ts  codespaces.ts  llm.ts  secure-store.ts  types.ts
phone/src/screens/: ChatScreen.tsx  FilesScreen.tsx  OnboardingScreen.tsx  SettingsScreen.tsx
phone/src/state/: store.ts
phone/tests/: codespaces.test.ts  llm.test.ts  secure-store.test.ts  setup.ts  store.test.ts
runtime-pkg/: README.md  pyproject.toml
runtime-pkg/pocketagent/: __init__.py  cli.py  server.py
skills/_template/: AGENTS.md  SKILL.md
skills/charts/: SKILL.md
skills/docx/: SKILL.md
skills/image-generation/: SKILL.md
skills/pdf/: SKILL.md
skills/web-search/: SKILL.md
(+11 files in other folders)
