[project]
name = "pocketagent-runtime"
version = "0.1.0"
description = "PocketAgent cloud agent runtime — a faithful clone of z.ai agentic-mode workspace, running inside GitHub Codespaces."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110,<1.0",
    "uvicorn[standard]>=0.27,<1.0",
    "websockets>=12,<17",
    "pydantic>=2.5,<3",
    "pydantic-settings>=2.1,<3",
    "openai>=1.50,<2",
    "httpx>=0.27,<1.0",
    "anyio>=4,<5",
    "ripgrepy>=2.2,<3",
    "python-multipart>=0.0.9,<1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8,<9",
    "pytest-asyncio>=0.23,<1.0",
    "httpx>=0.27,<1.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
